[gd_scene load_steps=2 format=3 uid="uid://b2k3n5p8x9c1m"]

[ext_resource type="Script" path="res://scripts/ui/contracts_dialog.gd" id="1_script"]

[node name="ContractsDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Available Contracts"

[node name="Spacer" type="Control" parent="Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/VBox/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ContractsList" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContractsContainer" type="VBoxContainer" parent="Panel/VBox/ContractsList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/VBox/Footer"]
layout_mode = 2
text = "Click a contract to view details and accept"

[node name="Spacer" type="Control" parent="Panel/VBox/Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefreshButton" type="Button" parent="Panel/VBox/Footer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "Refresh"

[connection signal="pressed" from="Panel/VBox/Header/CloseButton" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Panel/VBox/Footer/RefreshButton" to="." method="_refresh_contracts"]
